// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works as h1 1`] = `
.c0 {
  font-size: 1.875rem;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  font-weight: 700;
  color: #292B3E;
}

<h1
  class="c0"
  size="1"
>
  <p>
    Hello world!
  </p>
</h1>
`;

exports[`it works as h2 1`] = `
.c0 {
  font-size: 1.5rem;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  font-weight: 500;
  color: #292B3E;
}

<h2
  class="c0"
  size="2"
>
  <p>
    Hello world!
  </p>
</h2>
`;

exports[`it works as h3 1`] = `
.c0 {
  font-size: 1.25rem;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  font-weight: 500;
  color: #292B3E;
}

<h3
  class="c0"
  size="3"
>
  <p>
    Hello world!
  </p>
</h3>
`;

exports[`it works as h4 1`] = `
.c0 {
  font-size: 1.125rem;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  font-weight: 500;
  color: #292B3E;
}

<h4
  class="c0"
  size="4"
>
  <p>
    Hello world!
  </p>
</h4>
`;

exports[`it works as h5 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  font-weight: 500;
  color: #292B3E;
}

<h5
  class="c0"
  size="5"
>
  <p>
    Hello world!
  </p>
</h5>
`;

exports[`it works as h6 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  font-weight: 400;
  color: #292B3E;
}

<h6
  class="c0"
  size="6"
>
  <p>
    Hello world!
  </p>
</h6>
`;
